--- a/ref.bib
+++ b/ref.bib
@@ -1586,6 +1586,13 @@ author = {{Chelsio Communications}},
  address = {New York, NY, USA},
 }
 
+@inproceedings{heavy-hitters,
+ author = "Sivaraman, Vibhaalakshmi and Narayana, Srinivas and Rottenstreich, Ori and Muthukrishnan, S and Rexford, Jennifer",
+ title = "Heavy-Hitter Detection Entirely in the Data Plane",
+ booktitle = {SOSR},
+ year = 2017,
+}
+
 @inproceedings{icTCP,
  author = "Gunawi, Haryadi S. and Arpaci-Dusseau, Andrea C. and Arpaci-Dusseau, Remzi H.",
  title = "{Deploying Safe User-level Network Services with icTCP}",
@@ -1600,7 +1607,7 @@ author = {{Chelsio Communications}},
  year = {2007},
 }
 
-@article{nimbus,
+@article{nimbus-arxiv,
  author = {Goyal, Prateesh and Narayan, Akshay and Cangialosi, Frank and Raghavan, Deepti. and
      Narayana, Srinivas and Alizadeh, Mohammad and Balakrishnan, Hari},
  title = "{Elasticity Detection: A Building Block for Delay-Sensitive Congestion Control}",
@@ -1611,6 +1618,13 @@ author = {{Chelsio Communications}},
  keywords = {Computer Science - Networking and Internet Architecture},
  year = 2018,
  month = feb,
+}
+
+@inproceedings{nimbus,
+ author = "{{Anonymous Reference 1}}",
+ title = "{Details omitted for double-blind review.}",
+ booktitle = {NSDI},
+ year = {2020},
 }
 
 @misc{tcpbpf,
