--- a/design.tex
+++ b/design.tex
@@ -27,8 +27,8 @@ Therefore, running such an algorithm to set a bundle's rate would reduce its sel
 Note that end hosts would continue running a traditional congestion control algorithm as before (\eg Cubic~\cite{cubic}, BBR~\cite{bbr}) which is unaware of \name.
 Rather, the \inbox's congestion control algorithm acts on the traffic bundle as a \emph{single unit}.
 
-Figure~\ref{fig:design:shift-bottleneck} illustrates this concept for a single flow traversing a bottleneck link in the network
-\footnote{Details of the emulated network setup which resulted in the illustrated queue length time-series are in \S\ref{s:eval}.}.
+Figure~\ref{fig:design:shift-bottleneck} illustrates this concept for a single flow traversing a bottleneck link in the 
+network\footnote{Details of the emulated network setup which resulted in the illustrated queue length time-series are in \S\ref{s:eval}.}.
 Without \name, packets from the end hosts are queued in the network, while the queue at the edge is unoccupied. 
 In contrast, a \name deployed at the edge is able to shift the queue to its \inbox.
 
@@ -36,11 +36,20 @@ In contrast, a \name deployed at the edge is able to shift the queue to its \inb
 \begin{figure}
     \centering
     \includegraphics[width=\columnwidth]{img/arch-block-diag}
-    \caption{\name comprises of six sub-systems: four (in green) implement \inbox functionality, one (in blue) implements \outbox functionality, and the datapath (orange) is shared between the two. \name's architecture supports multiple compatible implementations (listed in the ``Impl'' section of each block).}\label{fig:design:block-diag}
+    \vspace{-50pt}
+    \caption{\name comprises of six sub-systems: four (in green) implement \inbox functionality, one (in blue) implements \outbox functionality, and the datapath (orange) is shared between the two.}\label{fig:design:block-diag}
 \end{figure}
-Figure~\ref{fig:design:block-diag} shows the necessary components of \name: (1) a means of determining bundle membership; (2) a rate enforcement mechanism; (3) a measurement strategy; (4) a delay-controller; and (5) a fairness-controller.
-Throughout this section we discuss design options for determining Bundle membership (\S\ref{s:design:membership}), observing feedback (\S\ref{s:design:twosided}), and congestion control (\S\ref{s:design:whichcc}): for other aspects of the design, \name is compatible with a variety of options. For example, domains can implement \name using any modern middlebox datapath, \eg P4~\cite{p4}, BESS~\cite{bess}, or as in our prototype implementation (\S\ref{s:impl}), Linux tc qdiscs.
-\radhika{maybe we can chop this subsection off -- let's discuss.}
+
+Figure~\ref{fig:design:block-diag} shows \name's sub-systems: 
+(1) A datapath for packet processing. Any modern middlebox datapath, \eg BESS~\cite{bess}, P4~\cite{p4}, or as in our prototype implementation (\S\ref{s:impl}), Linux tc qdiscs, would be suitable.
+(2) A congestion feedback mechanism and (3) measurement calculation module. We discuss options for implementing the congestion feedback mechanism in \S\ref{s:design:twosided} and how to use that feedback in the measurement module in \S\ref{s:measurement}.
+(4) A congestion control module which integrates delay-control, as discussed above, and cross-traffic detection, discussed in \S\ref{s:design:whichcc}.
+
+\an{radhika, pls check this subsection and the figure. I think it no longer requires understanding how everything works and is more of an overview?}
+
+%Figure~\ref{fig:design:block-diag} shows the necessary components of \name: (1) a means of determining bundle membership; (2) a rate enforcement mechanism; (3) a measurement strategy; (4) a delay-controller; and (5) a fairness-controller.
+%Throughout this section we discuss design options for determining Bundle membership (\S\ref{s:design:membership}), observing feedback (\S\ref{s:design:twosided}), and congestion control (\S\ref{s:design:whichcc}): for other aspects of the design, \name is compatible with a variety of options. For example, domains can implement \name using any modern middlebox datapath, \eg P4~\cite{p4}, BESS~\cite{bess}, or as in our prototype implementation (\S\ref{s:impl}), Linux tc qdiscs.
+%\radhika{maybe we can chop this subsection off -- let's discuss.}
 
 In the rest of this section, we discuss some of our key design choices.
 Our overarching design principle is simplicity; at various points in the design, there exists a more complex approach which we discard.
