add real world experiment figure

--- a/eval.tex
+++ b/eval.tex
@@ -173,3 +173,5 @@ The result is in Figure~\ref{fig:eval:proxy}. As expected, combining \name with 
 %
 %For the short requests which never leave TCP slow start, terminating TCP connections does not yield additional benefits: with or without termination, they finish in a few RTTs.
 %For medium-to-long requests, terminating TCP connections yields benefits since they no longer incur the penalty of window growth.
+
+\input{realworld}
