--- a/realworld.tex
+++ b/realworld.tex
@@ -5,7 +5,11 @@
 \includegraphics[width=\maxwidth]{figure/eval:realworld-1} 
 
 \end{knitrout}
-    \caption{On 5 real-Internet paths from the GCP datacenter in Iowa, \name achieves close to the Base RTT for latency-sensitive traffic. Each bar depicts an individual 5-tuple. On some paths, load-balancing in the Internet causes only some 5-tuples to experience queueing. \name offers scheduling for those paths.}
+\newcommand{\realworldMedianLatencyImprovement}{57\%\xspace}
+\newcommand{\realworldAvgBwRatio}{1\%\xspace}
+\caption{On 5 real-Internet paths, \name achieves close to the Base RTT for latency-sensitive traffic. Each bar depicts an individual 5-tuple. Load-balancing in the Internet prevents queueing for some 5-tuples. \name still offers scheduling for paths with queueing (achieving \realworldMedianLatencyImprovement lower latencies overall) while achieving overall throughput within \realworldAvgBwRatio of that in the Status Quo scenario.}
     \label{fig:eval:realworld}
 \end{figure}
-%\newcommand{\overviewBenefitsBundlerMedianImprovement}{round(100*(1-(overview_benefits_bundler_results[1] / overview_benefits_baseline_results[1])), 0)\%\xspace}
+
+\newcommand{\realworldMedianLatencyImprovement}{57\%\xspace}
+\newcommand{\realworldAvgBwRatio}{1\%\xspace}
